# yatripay

./: .appveyor.yml  .cirrus.yml  .fuzzbuzz.yml  .gitignore  .travis.yml  CODEOWNERS  CONTRIBUTING.md  Makefile.am  README.md  SECURITY.md  configure.ac  libyatripayconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  msvc-autogen.py  vcpkg.json  yatripay.sln  yatripay_config.h
contrib/: README.md  gitian-build.py  install_db4.sh  valgrind.supp  yatripay-pos-cli.bash-completion  yatripay-pos-qt.pro  yatripay-pos-tx.bash-completion  yatripay-posd.bash-completion
depends/: Makefile  README.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  metadata.json  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  yatripay-conf.md  yatripay-pos-conf.md  zmq.md
doc/man/: Makefile.am  yatripay-cli.1  yatripay-qt.1  yatripay-tx.1  yatripay-wallet.1  yatripayd.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  (+41 more)
(+478 files in other folders)
