dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=yatripayd.1
endif

if ENABLE_QT
  dist_man1_MANS+=yatripay-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=yatripay-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=yatripay-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=yatripay-wallet.1
endif
endif
